--- a/tech/tech.html
+++ b/tech/tech.html
@@ -87,6 +87,41 @@
           </button>
         </div>
       </div>
+      <div class="techBlock">
+        <div class="form-wysiwyg selectable">
+          <div class="form-wysiwyg-control">
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-bold%201.png" alt="bold">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-italic%201.png" alt="italic">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-underline%201.png" alt="underline">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-list-bulleted%201.png" alt="list">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-align-justify%201.png" alt="justify">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-align-left%201.png" alt="alignLeft">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-align-right%201.png" alt="alignRight">
+            </div>
+            <div class="form-wysiwyg-control__button">
+              <img src="../images/format-title.png" alt="title">
+            </div>
+          </div>
+          <div class="form-wysiwyg-form">
+            <label>
+              <textarea class="form-wysiwyg-form__textForm" rows="3" placeholder="Taping a comment..."></textarea>
+            </label>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="titled-card">
